# ViewerZIP

./: .gitmodules  CMakeLists.txt
include/: MainWindow.h  Model.h
include/model/: ZipFilesViewer.h  ZipInfoStorage.h  ZipInfoStorageViewDelegate.h  ZipInfoStorageViewInterface.h
include/view/: CentralWidget.h  MainWindow.h  MenuBar.h  TableModel.h  TableView.h
libs/minizip-ng/: CMakeLists.txt
source/: MainWindow.cpp  Model.cpp  main.cpp
source/model/: ZipFilesViewer.cpp  ZipInfoStorage.cpp  ZipInfoStorageViewDelegate.cpp  ZipInfoStorageViewInterface.cpp
source/view/: CentralWidget.cpp  MainWindow.cpp  MenuBar.cpp  TableModel.cpp  TableView.cpp
